# sumo-predictor

./: .gitignore  environment.yml  pyproject.toml  readme.md
reports/: 01_eda.md  phase1_results.md  smoke_segments.json  smoke_segments_aligned.json  test_alignment_segments.json
reports/pose_phase2/: phaseB_summary.json  segments_202401_d1.json  segments_202403_d1.json  segments_202403_d15.json  segments_202405_a.json  segments_202407_d1.json  segments_202407_d15.json  segments_202407_wrap.json  segments_202409_d1.json  segments_202411_d1.json  segments_202411_d15.json
scripts_tmp/: build_features_with_pose.py  build_history_sequences.py  download_videos.sh  ensemble_mb.py  extract_all.sh  merge_raw.py  run_phaseB_training.sh  train_aux_mb.py  train_bag_multibasho.py  train_ft_transformer.py  train_nbtr.py  train_ncf.py  train_sequence_siamese.py  train_siamese_attn.py  train_siamese_aug.py  train_siamese_deep.py  train_siamese_focused.py  train_siamese_mb.py  train_siamese_mixup.py  train_siamese_moe.py  train_siamese_multi.py  train_siamese_multitask.py  train_siamese_ranking.py  train_siamese_resattn.py  train_tabattn_siamese.py  train_wide_deep.py
src/data/: sumo_api.py  video_loader.py
src/eval/: __init__.py  backtest.py  eda.py
src/features/: __init__.py  banzuke.py  bayes_h2h.py  bout_align.py  caption_ocr.py  chronos_encoder.py  extract_bout_features.py  extract_official_bout.py  extract_perframe_features.py  interactions.py  kimarite_profiles.py  kinematics.py  match_sumo_official.py  pose.py  scene_cuts.py  skill_ratings.py  structural.py  tracking.py
src/models/: __init__.py  fusion.py  temporal.py
src/training/: __init__.py  bag_diverse.py  bag_seeds.py  ensemble_final.py  ensemble_v2.py  ensemble_v3.py  hybrid_pose.py  tabpfn_wrapper.py  train_autogluon.py  train_fusion.py  train_gnn.py  train_pose.py  train_pose_real.py  train_struct.py  tune_struct.py
tests/: test_bout_align.py  test_chronos_encoder.py  test_pose.py  test_structural_features.py  test_sumo_api.py  test_video_segments.py
