[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sumo-predictor"
version = "0.0.1"
description = "Sumo wrestling match outcome prediction with structured + pose-based features"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sumo_pred contributors" }]
keywords = ["sumo", "sports-prediction", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core data
    "pandas>=2.1",
    "polars>=0.20",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # ML / Boosting
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "optuna>=3.5",
    "mlflow>=2.10",
    # Notebook / Viz
    "jupyter>=1.0",
    "ipykernel>=6.28",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
lint = [
    "ruff>=0.1.13",
    "mypy>=1.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.13",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/"
Repository = "https://github.com/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: marks tests that hit live external APIs",
]
